# cookero-app

./: .gitignore  .pre-commit-config.yaml  PRD.md  settings.ini
backend/: pyproject.toml
backend/app/: main.py  settings.py
backend/app/api/routes/: auth.py  recipe.py
backend/app/core/: db.py  security.py
backend/app/dao/: recipe.py  user.py
backend/app/dependencies/: auth.py
backend/app/schemas/: recipe.py  user.py
backend/tests/: conftest.py  test_settings.py
backend/tests/api/: test_auth.py  test_auth_api.py  test_recipe_api.py
backend/tests/core/: test_db.py  test_security.py
backend/tests/dao/: test_recipe.py  test_recipe_dao.py  test_user.py  test_user_dao.py
docker/local/: docker-compose.yml
docs/: PRD-Backend.md  PRD-Frontend.md
