[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.115.8",
    "neo4j>=5.27.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0,<3.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.4",
]
