[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "neo4j>=5.27.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.8.0,<3.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-multipart>=0.0.20",
    "ruff>=0.9.4",
    "streamlit>=1.42.0",
]
